Revert "Merging changes from uschindler:jira/LUCENE-10335"
This reverts commit b3b31680713bea0bf7a4d883119764681903da2a.