@@ -119,10 +119,6 @@ allprojects {
       if (rootProject.runtimeJavaVersion < JavaVersion.VERSION_16) {
         jvmArgs '--illegal-access=deny'
       }
-      
-      // Lucene needs to optional modules at runtime, which we want to enforce for testing
-      // (if the runner JVM does not support them, it will fail tests):
-      jvmArgs '--add-modules', 'jdk.unsupported,jdk.management'
 
       systemProperty 'java.util.logging.config.file', file("${resources}/logging.properties")
       systemProperty 'java.awt.headless', 'true'
